-------------------------------------------------------------------------------

Sat Oct  9 20:35:22 PDT 1999
(Mandrake)

removing Ganymede and adding BlueSteel for release (sorry Christian - don't
have enough time to fix all of ganymede myself for epplets - we'll put it back
in CVS and remove BlueSteel later)

-------------------------------------------------------------------------------

Sun Oct 10 00:37:18 PDT 1999
(Mandrake)

since I've been mucking with ShinyMetal I thought I would put up a changelog
entry for it.  - I've redone a lot of this theme from the ground up.  it still
has a ways to go - a little more eterm autotheme tinkering as well as redoing
the epplet config (which I just copied straight from brushed metal)


-------------------------------------------------------------------------------

Sun Oct 10 01:32:17 PDT 1999
(Mandrake)

pretty much finished up shinymetal now.  what a pita.

-------------------------------------------------------------------------------

Sun Oct 10 01:43:18 PDT 1999
(Raster)

cleaned up a possible race condition when setting up IPC (discovered it 
coudl be a possible race condition whilsyt testign epplets starting on login)

-------------------------------------------------------------------------------

Sun Oct 10 01:53:41 PDT 1999
(Raster)

move snap spawing elsewhere....

-------------------------------------------------------------------------------

Sun Oct 10 02:58:26 PDT 1999
(Mandrake)

minor bug in Makefile.am that caused make distcheck to fail

-------------------------------------------------------------------------------

Sun Oct 10 09:33:57 PDT 1999
(Raster)

mayaswell store the new title in a property.. :)

-------------------------------------------------------------------------------

Sun Oct 10 11:17:24 PDT 1999
(Raster)

fix obscure menu bug :)

-------------------------------------------------------------------------------

Sun Oct 10 12:49:28 PDT 1999
(Raster)

add sanity checks to the installation...