@@ -322,3 +322,4 @@
 #define CONFIG_SCROLLBAR_AUTOHIDE 2009
 #define CONFIG_COVER_HIDE 2010
 #define CONFIG_RESIZE_ANCHOR 2011
+#define CONFIG_IB_ANIMATE 2012
