@@ -146,6 +146,7 @@
 #define __GROUP_MIRROR 1365
 #define __KDE_SUPPORT 1366
 #define __CLICKS_ALWAYS_RAISE_WINDOWS 1367
+#define __ROOT_WINDOW_TOOLTIP 1368
 
 #define __DIRECTION_OF_DESKTOP_DRAG 400
 #define __WIDTH_OF_DRAGBAR 401
@@ -424,6 +425,7 @@
 #define __SCROLLBAR_AUTOHIDE 2009
 #define __COVER_HIDE 2010
 #define __RESIZE_ANCHOR 2011
+#define __ICONBOX_ANIMATE 2012
 
 #define __HORIZONTAL 0
 #define __VERTICAL 1
